got text spacing correct after 1000 attempts

--- a/styles.css
+++ b/styles.css
@@ -16,22 +16,25 @@ header {
 }
 
 .nav {
-    color:(rgb(235, 235, 235, .75));
+    color:(rgba(255, 211, 154, 0.75));
 }
 
 #stadium-photo {
     background-image: url("https://images.unsplash.com/photo-1593558209560-2ac5abd19cf8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
     height: 400px;
     background-position: center;
-    margin-bottom: 0px;
+    margin-bottom: -50px;
+    margin-top: -60px;
 }
 
 #title-section {
     background-image: url("https://images.unsplash.com/photo-1519972064555-542444e71b54?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
-    height: 300px;
-    background-position: center;
-    margin-top: 0px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .header-text {
     text-align: center;
@@ -39,12 +42,12 @@ header {
 
 #title-header {
     font-size: 50px;
-    margin-top: 100px;
     font-family: 'Homemade Apple', cursive;
 }
 
 #title-subheader {
     font-size: 25px;
+    margin-top: -40px;
 }
 
 #functioning-section {
@@ -52,7 +55,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     height: 600px;
-    background-image: url("https://images.unsplash.com/photo-1505417947090-b3f8836c0f17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80");
+    background-image: url("https://images.unsplash.com/photo-1617052145857-6a353a082244?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2234&q=80");
     background-position: center;
 }
 
